# grocery-deals-agent

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  aldi.py  base.py  graph.py  kaufland.py  lidl.py  netto.py  penny.py  rewe.py
backend/app/agents/prompts/: aldi_extract.txt  kaufland_extract.txt  lidl_extract.txt  netto_extract.txt  penny_extract.txt  rewe_extract.txt
backend/app/api/: health.py  prospekt.py  search.py
backend/app/clients/: embeddings.py  llm.py  vision.py
backend/app/core/: config.py  llm.py  logging.py
backend/app/graphs/: search.py
backend/app/persistence/: db.py  models.py  repository.py
backend/app/schemas/: basket.py  offer.py  search.py
backend/app/services/: geo.py  matching.py  offers.py  optimizer.py  prospekt.py  refresh.py  search.py  vision.py
backend/app/sources/: __init__.py  base.py  marktguru.py
backend/app/sources/prospekt/: __init__.py  aldi.py  base.py  kaufland.py  lidl.py  netto.py  penny.py  rewe.py
backend/app/sources/prospekt/prompts/: aldi_extract.txt  kaufland_extract.txt  lidl_browse.txt  lidl_extract.txt  netto_extract.txt  penny_extract.txt  rewe_extract.txt
backend/tests/: test_health.py  test_llm_parse.py  test_matching.py  test_optimizer.py
backend/tests/unit/: test_cache_policy.py  test_llm_parse.py  test_offer.py
docs/: adding-a-retailer.md  architecture.md  data-sources.md
docs/adr/: 0001-record-architecture-decisions.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ProspektPanel.tsx  Timeline.tsx  api.ts  index.css
frontend/src/components/: OfferCard.tsx  icons.tsx  retailers.tsx
frontend/src/features/basket/: BasketPanel.tsx
frontend/src/features/scan/: ScannerPanel.tsx
frontend/src/lib/: api.ts
infra/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
mcp_servers/browse_search/: server.py
mcp_servers/geo/: server.py
mcp_servers/vision/: server.py
scripts/: download_model.sh  pull_models.sh  run_dev.sh  serve_llm.sh  serve_vllm.sh  serve_vlm.sh  setup_env.sh
