[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery-deals-agent"
version = "0.0.1"
description = "Agentic AI for finding discounted German grocery offers by location"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "pyyaml>=6.0",
    "tenacity>=8.3",
]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.2",
    "openai>=1.40",
    "pgvector>=0.3",
]
scraping = [
    "playwright>=1.45",
    "browser-use>=0.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]
